fixed video alignment

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,9 @@
  */
 @import 'variables';
 
+body {
+  margin-bottom: 3.5em;
+}
 
 h4 {
   font-family: Hind;
